--- a/package.json
+++ b/package.json
@@ -45,15 +45,10 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.9",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "formik": "^2.2.9",
-    "framer-motion": "^9.0.1",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.8.1",
     "tslib": "^2.3.0"
   }
 }
