--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
