--- a/apps/backend/template.yaml
+++ b/apps/backend/template.yaml
@@ -59,13 +59,13 @@ Resources:
   getFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: dist/handlers/get.getHandler
+      Handler: dist/handlers/get-all-forms.getAllFormsHandler
       Runtime: nodejs18.x
       Architectures:
       - x86_64
       MemorySize: 128
       Timeout: 100
-      Description: A simple example includes a HTTP get method that returns "Hello world!".
+      Description: An http get method to get all forms.
       Role: !GetAtt QLDBSendCommandRole.Arn
       Events:
         Api:
@@ -73,28 +73,7 @@ Resources:
           Properties:
             Path: /
             Method: GET
-  # Each Lambda function is defined by properties:
-  # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
-  # This is a Lambda function config associated with the source code: get-by-id.js
-  getByIdFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: dist/handlers/get-by-id.getByIdHandler
-      Runtime: nodejs18.x
-      Architectures:
-      - x86_64
-      MemorySize: 128
-      Timeout: 100
-      Description: A simple example includes a HTTP get method to get one item by
-        id from a dummy nonexistent table.
-      Role: !GetAtt QLDBSendCommandRole.Arn
-      Events:
-        Api:
-          Type: Api
-          Properties:
-            Path: /{id}
-            Method: GET
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
