--- a/apps/backend/template.yaml
+++ b/apps/backend/template.yaml
@@ -55,6 +55,25 @@ Resources:
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
+  # This is a Lambda function config associated with the source code: get.js
+  getFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: dist/handlers/get.getHandler
+      Runtime: nodejs18.x
+      Architectures:
+      - x86_64
+      MemorySize: 128
+      Timeout: 100
+      Description: A simple example includes a HTTP get method that returns "Hello world!".
+      Role: !GetAtt QLDBSendCommandRole.Arn
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /
+            Method: GET
+
   # This is a Lambda function config associated with the source code: getAllForms.ts
   getFunction:
     Type: AWS::Serverless::Function
