--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "nx": "15.5.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
@@ -45,8 +46,10 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.4.1",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
+    "aws-amplify": "^5.0.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
