--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,8 @@
 {
-  "projectName": "constellation",
+  "providers": [
+    "awscloudformation"
+  ],
+  "projectName": "constellationTest",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
@@ -7,11 +10,8 @@
     "config": {
       "SourceDir": "apps/frontend/src",
       "DistributionDir": "build",
-      "BuildCommand": "npm run-script build",
+      "BuildCommand": "nx build frontend",
       "StartCommand": "nx serve frontend"
     }
-  },
-  "providers": [
-    "awscloudformation"
-  ]
+  }
 }
