--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typescript": "~4.8.2"
   }
 }
