--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
+    "typescript": "~4.8.2",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
@@ -57,7 +58,6 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
-    "tslib": "^2.3.0",
-    "typescript": "~4.8.2"
+    "tslib": "^2.3.0"
   }
 }
