--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "axios": "^1.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.1",
     "react": "18.2.0",
