--- a/apps/backend/template.yaml
+++ b/apps/backend/template.yaml
@@ -10,7 +10,7 @@ Description: >-
 # Transform section specifies one or more macros that AWS CloudFormation uses to process your template
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/transform-section-structure.html
 Transform:
-- AWS::Serverless-2016-10-31
+  - AWS::Serverless-2016-10-31
 
 # Resources declares the AWS resources that you want to include in the stack
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
@@ -21,9 +21,9 @@ Globals:
   Api:
     TracingEnabled: true
     Cors:
-        AllowMethods: "'GET,POST,OPTIONS'"
-        AllowHeaders: "'content-type, Access-Control-Allow-Origin'"
-        AllowOrigin: "'*'"
+      AllowMethods: "'GET,POST,OPTIONS'"
+      AllowHeaders: "'content-type, Access-Control-Allow-Origin'"
+      AllowOrigin: "'*'"
 
 Resources:
   # Defines an IAM role for Lambdas that allows them to:
@@ -32,9 +32,9 @@ Resources:
   QLDBSendCommandRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: QLDBSendCommandRole 
+      RoleName: QLDBSendCommandRole
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Principal:
@@ -49,14 +49,14 @@ Resources:
             Version: 2012-10-17
             Statement:
               - Effect: Allow
-                Action: 
-                  - "qldb:SendCommand"
-                  - "qldb:PartiQL*"
+                Action:
+                  - 'qldb:SendCommand'
+                  - 'qldb:PartiQL*'
                 Resource: '*'
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
 
-  MyApi:
+  ApiGateway:
     Type: AWS::Serverless::Api
     Properties:
       StageName: Prod
@@ -71,7 +71,7 @@ Resources:
       Handler: dist/handlers/get.getHandler
       Runtime: nodejs18.x
       Architectures:
-      - x86_64
+        - x86_64
       MemorySize: 128
       Timeout: 100
       Description: A simple example includes a HTTP get method that returns "Hello world!".
@@ -82,16 +82,16 @@ Resources:
           Properties:
             Path: /
             Method: GET
-            RestApiId: !Ref MyApi
+            RestApiId: !Ref ApiGateway
 
   # This is a Lambda function config associated with the source code: getAllForms.ts
-  getFunction:
+  getAllFormsFunction:
     Type: AWS::Serverless::Function
     Properties:
       Handler: dist/handlers/getAllForms.getAllFormsHandler
       Runtime: nodejs18.x
       Architectures:
-      - x86_64
+        - x86_64
       MemorySize: 128
       Timeout: 100
       Description: An http get method to get all forms.
@@ -102,8 +102,8 @@ Resources:
           Properties:
             Path: /forms
             Method: GET
-            RestApiId: !Ref MyApi
-    
+            RestApiId: !Ref ApiGateway
+
   # This is a Lambda function config associated with the source code: putForm.ts
   putFormFunction:
     Type: AWS::Serverless::Function
@@ -111,7 +111,7 @@ Resources:
       Handler: dist/handlers/putForm.putFormHandler
       Runtime: nodejs18.x
       Architectures:
-      - x86_64
+        - x86_64
       MemorySize: 128
       Timeout: 100
       Description: An HTTP post method to add one form to the QLDB table.
@@ -122,7 +122,7 @@ Resources:
           Properties:
             Path: /form
             Method: POST
-            RestApiId: !Ref MyApi
+            RestApiId: !Ref ApiGateway
 
   # Creates an AWS KMS key to encrypt/decrypt data in QLDB
   # the key policy gives root account users key management permissions
@@ -151,7 +151,7 @@ Resources:
 
   myQLDBLedger:
     Type: AWS::QLDB::Ledger
-    Properties: 
+    Properties:
       DeletionProtection: false #TODO: change to true for prod, set to false so we can delete the entire stack during the development process
       KmsKey: !Ref QLDBKey
       Name: TestLedger
@@ -162,9 +162,9 @@ Resources:
     Properties:
       Name:
         Fn::Join:
-        - ''
-        - - ApplicationInsights-SAM-
-          - Ref: AWS::StackName
+          - ''
+          - - ApplicationInsights-SAM-
+            - Ref: AWS::StackName
       ResourceQuery:
         Type: CLOUDFORMATION_STACK_1_0
   ApplicationInsightsMonitoring:
@@ -172,12 +172,12 @@ Resources:
     Properties:
       ResourceGroupName:
         Fn::Join:
-        - ''
-        - - ApplicationInsights-SAM-
-          - Ref: AWS::StackName
+          - ''
+          - - ApplicationInsights-SAM-
+            - Ref: AWS::StackName
       AutoConfigurationEnabled: 'true'
     DependsOn: ApplicationResourceGroup
 Outputs:
   WebEndpoint:
     Description: API Gateway endpoint URL for Prod stage
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
+    Value: !Sub 'https://${ApiGateway}.execute-api.${AWS::Region}.amazonaws.com/Prod/'
