--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
-    "build": "npx tsc && sam build",
+    "build": "rm -rf dist && npx tsc && sam build",
     "dev-deploy": "sam deploy --guided --capabilities CAPABILITY_NAMED_IAM"
   },
   "jest": {
