giant commit oops

--- a/apps/frontend/tsconfig.spec.json
+++ b/apps/frontend/tsconfig.spec.json
@@ -16,7 +16,7 @@
     "src/**/*.test.jsx",
     "src/**/*.spec.jsx",
     "src/**/*.d.ts"
-  ],
+, "src/types/formData.ts"  ],
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
     "../../node_modules/@nrwl/react/typings/image.d.ts"
