remove minor odd changes

--- a/apps/frontend/tsconfig.spec.json
+++ b/apps/frontend/tsconfig.spec.json
@@ -15,8 +15,8 @@
     "src/**/*.spec.js",
     "src/**/*.test.jsx",
     "src/**/*.spec.jsx",
-    "src/**/*.d.ts"
-, "src/types/formData.ts"  ],
+    "src/**/*.d.ts",
+  ],
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
     "../../node_modules/@nrwl/react/typings/image.d.ts"
