--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,12 +14,14 @@
     "ion-js": "^4.3.0",
     "jsbi": "^3.2.5",
     "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
     "@types/aws-lambda": "^8.10.110",
     "@types/node": "^18.13.0",
+    "@types/uuid": "^9.0.1",
     "aws-sdk-client-mock": "^2.0.0",
     "jest": "^29.2.1",
     "quicktype": "^21.0.12",
