Added authorization to request headers
- Added Authorization to allowed headers in CORs
- Update the requests to add auth in them

--- a/apps/backend/template.yaml
+++ b/apps/backend/template.yaml
@@ -22,7 +22,7 @@ Globals:
     TracingEnabled: true
     Cors:
       AllowMethods: "'GET,POST,PATCH,OPTIONS'"
-      AllowHeaders: "'content-type, Access-Control-Allow-Origin'"
+      AllowHeaders: "'content-type, Access-Control-Allow-Origin, Authorization'"
       AllowOrigin: "'*'"
 
 Resources:
