--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "aws-amplify": "^5.0.22",
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.1",
     "react": "18.2.0",
@@ -60,6 +60,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "yup": "^1.1.0"
   }
 }
