--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/poppins": "^5.0.13",
     "aws-amplify": "^5.0.22",
     "axios": "^1.3.5",
     "formik": "^2.2.9",
