--- a/apps/frontend/tsconfig.spec.json
+++ b/apps/frontend/tsconfig.spec.json
@@ -15,7 +15,7 @@
     "src/**/*.spec.js",
     "src/**/*.test.jsx",
     "src/**/*.spec.jsx",
-    "src/**/*.d.ts",
+    "src/**/*.d.ts"
   ],
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
