--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
-  "compilerOptions": {
-    "sourceMap": true,
-    "lib": ["ES2022"],
-    "module": "ES2022",
-    "moduleResolution": "node16",
-    "target": "ES2022",
-    "outDir": "./dist",
-    "rootDir": "./src",
-  },
-  "include": ["src/**/*.ts", "src/**/*.js"],
+    "extends": "@tsconfig/node18/tsconfig.json",
+    "compilerOptions": {
+      "sourceMap": true,
+      "lib": ["ES2022"],
+      "module": "ES2022",
+      "moduleResolution": "node16",
+      "target": "ES2022",
+      "outDir": "./dist",
+      "rootDir": "./src"
+    },
+    "include": ["src/**/*.ts", "src/**/*.js"]
 }
