--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.25",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -57,6 +58,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^9.0.1",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
